# HERD_acceptance

./: .gitmodules  .list.small.txt.swp  CMakeLists.txt  CaloGeomFidVolume.cpp  CaloGeomFidVolume.h  MCtruthProcess.h  README.md  analysis.electrons_10GeV_1000GeV_E-1.eaconf  electronAnalysis.eaconf  list.small.txt
Assets/healpixMapVisualizer/: visMap.py
Assets/listBuilder/: listBuilder.py
Calo/: CaloAxis.cpp  CaloAxis.h  CaloAxisInfo.cpp  CaloAxisInfo.h  CaloGlob.cpp  CaloGlob.h  CaloTest.cpp  CaloTest.h
GeomAcceptance/: CaloGeomFidVolume.cpp  MCtruthProcess.cpp
Histo/: MCmomHisto.h  mcAngleDistribution.cpp  mcAngleDistribution.h  mcEnergyHisto.cpp  mcEnergyHisto.h  mcEnergyHisto3D.cpp  mcEnergyHisto3D.h  mcGenSpectrum.cpp  mcGenSpectrum.h
ROOT_Macro/: plotAcceptance.cpp
ROOT_Macro/Adder/: adder.cpp
ROOT_Macro/buildAcceptance/: plotAcceptance.cpp
ROOT_Macro/csvToTTreeConverter/: csvToTree.cpp
ROOT_Macro/fluxFitter/: fluxFitter.cpp
mapsBuilder/: makefile
mapsBuilder/include/: DAMPE_acquisition_rate.h  acceptance_reader.h  compute_livetime.h  extractor.h  fluxFit.h  main.h  unique.h
mapsBuilder/source/: DAMPE_acquisition_rate.cpp  acceptance_reader.cpp  compute_livetime.cpp  event_map.cpp  extractor.cpp  fluxFit.cpp  main.cpp  unique.cpp
